governance/baselines/1.11.0/references/01-daily-report-rules.md
# 日报生成约束规则

本规则适用于个人日报、项目日报、周报的生成与联动处理。模板文件统一存放于 `assets/templates/`。

---

## 1. 个人日报

### 1.1 输入来源

个人日报来源包括：团队成员提交的日报文本、会议纪要中提取的行动项、任务看板中的状态变更。

### 1.2 个人日报模板

完整模板见 `assets/templates/personal-daily-template.md`。格式要点：YAML 头（doc_type: personal-daily）+ 六段结构（今日完成 / 进行中 / 明日计划 / 阻塞事项 / 潜在风险 / 投入工时）。

### 1.2b 术语归一化预处理（日报解析前置步骤）

解析个人日报前，AI 必须执行术语归一化预处理，流程要点：读取词库 → 先 confirmed 静默替换再处理纠错映射 → 未命中新术语按置信度判定入 `pending` → 生成标准化输入送入日报解析 → 输出保留原文片段+归一化结果+状态。`pending` 三层模型、禁止事项、置信度判定与归一化优先级详见 `17-domain-glossary-rules.md` §4/§6（完整九步流程）。

### 1.3 处理规则

1. 个人日报必须包含关联任务 ID（如有）。
2. 日报中提到"可能""担心""如果"等不确定表述，必须标记为潜在风险。
3. 日报中提到"无法""阻塞""等待"等，必须标记为问题或阻塞。
4. 日报缺失关联 ID 时，AI 应提示补充，不可自行编造 ID。
5. 日报文件名固定为 `YYYY-MM-DD-{姓名}.md`，同一人同一天只允许存在一份。
6. 同一人同一天多次提交时，必须**合并追加**到已有日报，不得覆盖。
7. 合并规则：
   - **今日完成**：追加到列表末尾，保留原事项。
   - **进行中**：同任务有进度时更新描述，新任务追加。
   - **明日计划**：覆盖更新（以最新为准）。
   - **阻塞事项**：追加新阻塞，保留未解决项；已解决标记「已解决」。
   - **潜在风险**：追加新风险，保留原风险。
   - **投入工时**：同模块累加，不同模块新增行。
8. 每次合并后，在日报末尾「更新记录」追加一行合并日志。
9. 检测到同一天已有日报时，提示「检测到 {姓名} {日期} 已有日报，将执行合并而非覆盖」，并在合并后输出合并摘要。

### 1.4 日报合并更新记录

每份日报末尾必须包含「更新记录」表，含列：`Time | Action | Items Added | Items Updated | Merged By`。

- Time：操作时间，格式 `YYYY-MM-DD HH:MM`。
- Action：`create`（首次创建）/ `merge`（合并追加）/ `update`（修改已有内容）。
- Items Added / Items Updated：本次新增/更新的事项数。
- Merged By：操作人（用户姓名或 AI辅助）。

### 1.5 资源变动检测（项目集模式）

项目集模式下，AI 必须扫描个人日报中的资源变动关键词：

| 触发关键词 | 检测意图 | 联动动作 |
|---|---|---|
| 被抽调 / 借调 / 调往 / 支援其他项目 | 人员流出 | 提示更新 `resource-register.md` 状态 + 生成 `transfer-log.md` 流转记录 |
| 新增人员 / 加入团队 / 报到 / 到岗 | 人员流入 | 提示更新 `resource-register.md` 新增记录 |
| 请假 / 休假 / 产假 / 病假 / 事假 | 临时不可用 | 提示状态「休假」+ 判断是否触发 B 角接管 |
| 离职 / 辞职 / 离场 / 退出 | 人员流出（永久） | 提示状态「已离场」+ 生成流转记录 + 评估知识交接风险 |
| 转岗 / 角色变更 / 换项目 | 角色变更 | 提示更新角色 + 生成流转记录 |
| 兼顾 / 兼任 / 同时负责 | 分配方式变更 | 提示分配方式「兼职」+ 评估风险等级 |

**处理规则：**

1. 检测到关键词后，AI 不得自行修改 `resource-register.md` / `transfer-log.md`，而是在日报末尾输出「资源变动建议更新清单」，由项目经理确认后执行。
2. 若流出涉及关键路径上的唯一负责人且无 B 角，必须以高优先级警告提示。
3. 若人员变动导致某子项目可用人力低于容忍度下限（见 `09-portfolio-rules.md`），标注「资源风险触发」。

**候选资源变更（v1.6.1 新增）：**

1. 日报中某人参与某项目但 `resource-register.md` 未登记时，AI **不得自动添加**，只能输出「候选资源变更」。
2. 候选变更标记为待确认，由项目经理决定是否更新 register。
3. 人员变动信号只能产生候选变更，不得直接覆盖 register。
4. **禁止行为**：不得将日报中出现的人员自动认定为正式成员；不得未经确认修改 register。

**输出格式要点：** 候选资源变更与资源变动建议更新清单均内联在日报末尾，含列 `来源 | 当前状态 | 一致性判断 | 建议操作`；建议更新清单再附加清单表头（`Resource ID | 建议动作 | 原因 | 优先级`），由项目经理确认后执行，AI 不得直接改 register。

---

## 2. 项目日报

### 2.1 生成规则

项目日报由多个个人日报汇总生成：

```
N 份个人日报 → 汇总分析 → 1 份项目日报
```

### 2.2 项目日报模板

完整模板见 `assets/templates/project-daily-template.md`。格式要点：YAML 头（doc_type: project-daily）+ 八段结构（今日进展/任务完成/进行中/阻塞与问题/新增风险/里程碑影响/成本与工时/明日重点）+ 建议更新清单 + 信息来源 + 不确定项。

### 2.3 汇总规则

1. 项目日报必须覆盖所有提交的个人日报，不可遗漏。
2. 项目日报必须关联到当前里程碑。
3. 任务状态必须与 `tasks/board.md` 交叉验证，不一致时标注差异。
4. 成本数据必须与 `plans/budget.md` 交叉验证。
5. 个人日报之间存在矛盾时（如同一任务两人报告不同状态），必须标注矛盾并提示项目经理确认。
6. **项目集模式**下，必须与 `portfolio/resources/resource-register.md` 交叉验证人员可用性，未登记则提示补充。
7. **项目集模式**下，跨子项目资源的「需协调事项」必须标注 `[跨项目]` 并建议同步到 `portfolio/reports/` 项目集周报。

---

## 3. 周报

### 3.0 项目集模式下的周报层级

| 层级 | 文件位置 | 内容 | 生成方式 |
|---|---|---|---|
| 子项目周报 | `ai/projects/{子项目}/reports/weekly/YYYY/YYYY-Wxx.md` | 单个子项目本周进展 | 子项目日报逐日累积 |
| 项目集汇总周报 | `ai/portfolio/reports/weekly/YYYY/YYYY-Wxx.md` | 所有子项目汇总 + 跨项目事项 + 资源全景 | 子项目周报汇总生成 |

**生成链路：** 各子项目日报（每日）→ 各子项目周报（每周）→ 项目集汇总周报（跨子项目合并）。

**触发条件：** 用户要求「写周报」「写项目集周报」「汇总周报」时，若处于项目集模式，必须同时生成或更新项目集汇总周报，不得只生成子项目周报。

### 3.1 生成模式

周报非最终触发式生成，而是每日累积更新：每日项目日报 → 追加/更新本周周报草稿。

### 3.2 周报模板

完整模板见 `assets/templates/weekly-report-template.md`。格式要点：YAML 头（doc_type: weekly-report）+ 九段结构（本周概要/完成/新增风险/新增问题/延期任务/里程碑状态/成本与预算/需协调事项/下周计划）+ 信息来源。

### 3.3 更新规则

1. 每次生成项目日报后，AI 必须输出「周报建议更新片段」（周报文件目标 + 本周完成/新增风险/新增问题/需协调事项 四类 Updates，附来源日报路径），格式见 `assets/templates/weekly-report-template.md`。
2. 用户人工复制到周报文件。
3. 周报每周一开新文件，上周状态改为「已确认」或「已归档」。
4. 周报中引用的所有 ID 必须与事实源文件一致。

### 3.4 项目集汇总周报规则

项目集模式下，生成子项目周报后，AI 必须额外输出「项目集汇总周报更新片段」，含四类内容：子项目汇总片段（概要/里程碑/风险/成本偏差）、跨项目事项、资源全景表、整体 P&L 表。格式见 `assets/templates/portfolio-weekly-template.md`。

**生成规则：**

1. 必须覆盖所有纳入管理的子项目，不可遗漏。
2. 跨项目事项来源：子项目周报标注 `[跨项目]` 的需协调事项、`transfer-log.md` 本周新增流转记录、`risks/board.md` 标注「跨项目」的风险项。
3. 资源全景表必须与 `resource-register.md` 交叉验证。
4. 整体 P&L 必须汇总各子项目 `plans/budget.md` 数据。
5. AI 不得自行确认项目集汇总周报，必须输出建议片段由项目经理确认后更新。

---

## 4. 日报索引维护

### 4.1 月度索引

每个 `YYYYMM/` 目录必须维护 `index.md`，记录该月日报索引。索引列定义与格式见 `assets/templates/index-formats.md`（日报索引）。AI 生成周报时优先读索引，而非逐个扫描所有日报文件；仅当索引摘要不足时才读取具体日报。

### 4.2 日报同步状态索引

`reports/daily/index.md` 记录每天日报同步状态，含列：`Date | Type | File | Owner | Summary | Task Sync | Risk Sync | Issue Sync | Weekly Sync`。同步状态取值：`pending` / `accepted` / `rejected` / `none`（无需要同步项）。

---

## 5. 个人进度自动联动

### 5.1 个人进度汇总文件

每个团队成员维护一份个人进度汇总文件 `reports/daily/personal/summaries/{name}-progress.md`，即该成员在当前子项目中的工作进度全貌（当前任务、里程碑关联、风险点、近期进展概要）。

### 5.2 汇总文件结构

完整结构见 `assets/templates/personal-progress-template.md`。格式要点：YAML 头（doc_type: personal-progress）+ 五段（当前任务/负责的风险/负责的问题/近期进展概要/工时投入）。

### 5.3 自动联动规则

当某个成员的个人日报被新增或更新时，AI 必须自动执行以下联动：

| 联动项 | 源 | 目标 | 规则 |
|---|---|---|---|
| 任务进度同步 | 日报"今日完成"/"进行中" | `summaries/{name}-progress.md`「当前任务」 | 更新对应任务完成百分比和状态 |
| 任务看板同步 | 日报任务进展 | `tasks/board.md` | 已完成→建议 done；进度变化→建议更新百分比 |
| 里程碑关联 | 日报提及里程碑 | `summaries/{name}-progress.md`「当前任务」 | 补充任务关联里程碑 |
| 风险联动 | 日报"担心"“可能”“如果” | `risks/risk-register.md` + 个人汇总「负责的风险」 | 新增风险候选，同步个人汇总 |
| 问题联动 | 日报"阻塞"“无法”“等待” | `issues/issue-register.md` + 个人汇总「负责的问题」 | 新增问题候选，同步个人汇总 |
| 近期进展 | 日报完成/进行中/阻塞 | `summaries/{name}-progress.md`「近期进展概要」 | 追加一行当日进展概要 |
| 工时统计 | 日报投入工时 | `summaries/{name}-progress.md`「工时投入」 | 累加到对应周度统计 |
| 月度索引 | 日报文件信息 | `YYYYMM/index.md` | 更新该日报索引记录 |

### 5.4 联动输出格式

检测到日报更新时，AI 输出「个人进度联动建议」，含源日报标识与一张建议表（联动项 / 目标文件 / 建议动作 / Need Confirmation），格式见 `assets/templates/personal-progress-template.md`。每个动作按 5.5 权限标注是否需要确认。

> "Need Confirmation"列含义：`proactive` 模式下，低/中风险（含 board/risk/issue 的过程性更新）填"否（写为待确认）"（写入事实源并标记 `Confirmed By: 待确认`、登记 `pending-changes.md`）；终态（done/关闭/confirmed/离场）与高风险项填"是"（须确认后才写）。

### 5.5 联动权限规则

| 联动目标 | 权限 | 说明 |
|---|---|---|
| `summaries/{name}-progress.md` | 低风险，可主动更新 | 个人工作视图，非事实源 |
| `YYYYMM/index.md` | 低风险，可主动更新 | 索引可自由更新 |
| `tasks/board.md` | 过程性更新可写为待确认 | 过程性更新（如状态中途/Owner/Due Date）可写入并标记 `Confirmed By: 待确认`、登记 `pending-changes.md`；终态（done）仍高风险需确认 |
| `risks/risk-register.md` | 过程性更新可写为待确认 | 过程性更新（如候选新增 open/描述变化）可写入并标记 `Confirmed By: 待确认`、登记 `pending-changes.md`；终态（closed/confirmed）仍高风险需确认 |
| `issues/issue-register.md` | 过程性更新可写为待确认 | 过程性更新（如候选新增 open/描述变化）可写入并标记 `Confirmed By: 待确认`、登记 `pending-changes.md`；终态（关闭）仍高风险需确认 |

### 5.6 反向查询

用户查询某人工作情况时，AI 应优先读取 `summaries/{name}-progress.md`，而非逐日扫描日报；如需某天细节再读取对应日报。查询链路：`该人当前任务 → 输出当前任务+进度+风险+近期进展 → 需要时读具体日报`。

### 5.6b 待办索引同步

日报处理完成后，AI 必须同步更新项目集级待办索引：

| 日报内容 | 同步到 | 规则 |
|---|---|---|
| 明日计划 | `portfolio/todos/personal-todo-index.md` | 提取为 TODO-NNN，Owner=作者，Due=明日 |
| 明日计划 | `portfolio/todos/daily-todo-index.md` | 追加到对应日期区块 |
| 本周计划 | `portfolio/todos/weekly-todo-index.md` | 提取为本周重点条目 |
| 任务进展 | `portfolio/todos/personal-todo-index.md` | 已完成→对应 TODO 状态 done |

**同步权限：** `personal-todo-index.md` / `daily-todo-index.md` / `weekly-todo-index.md` 是查询加速层，非事实源，低风险可主动更新；索引不存在则创建并提示用户。

### 5.6c 快照与实际执行生成

日报处理完成后，AI 必须执行：生成计划快照（从明日计划提取，snapshot_date=今天，target_date=明天）、更新历史索引、生成实际执行摘要（从今日完成/进行中/阻塞提取）。快照与实际执行摘要属低风险可主动生成；快照生成后冻结，修改需追加 Revision Log。详见 `15-snapshot-rules.md`。

### 5.7 批量联动

用户一次性提交多份日报时，AI 必须：逐份解析、为每成员分别输出联动建议、合并任务看板更新建议（同一任务多人提及合并为一条）、合并风险/问题更新建议（去重）、统一输出建议更新清单。

### 5.8 归档触发检查（日报处理流程末尾步骤）

每次日报处理流程末尾，AI 必须执行 Change Log 归档触发检查：

1. 读取活跃区 Change Log（如 `tasks/change-log.md`、`risks/.../change-log.md` 等），判断是否满足归档条件。
2. 归档触发条件：活跃区 Change Log **超过 50 行**，或**超过 30 天**未归档。
3. 满足任一条件时，触发按月归档：将活跃区条目按月份归档到 `change-log/archive/YYYYMM-change-log.md`（详见 `06-file-rules.md`），并同步维护 `change-log/index.md` 月份导航索引。
4. 归档后活跃区仅保留当前活跃条目，归档区与活跃区不得重复。
5. 与 `14-self-check-rules.md` 的 D12 归档检查联动；项目集模式下按各子项目 `change-log/archive/` 粒度归档，项目集级仅维护统一 `change-log/index.md`。
